kubernetes/overlays/prod/overlays/askem-staging/gateway/gateway-keycloak-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-keycloak
spec:
  template:
    spec:
      containers:
        - name: gateway-keycloak
