kubernetes/overlays/prod/overlays/askem-staging/gateway/gateway-landing-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-landing
spec:
  template:
    spec:
      containers:
        - name: gateway-landing
          volumeMounts:
            - name: config-volume
              mountPath: /etc/nginx/conf.d/
            - name: site-volume
              mountPath: /var/www
      volumes:
        - name: config-volume
          configMap:
            name: landing-config-xxx
        - name: site-volume
          configMap:
            name: landing-site-xxx
