kubernetes/overlays/prod/overlays/askem-staging/gateway/gateway-spicedb-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-spicedb
spec:
  template:
    spec:
      containers:
        - name: gateway-spicedb
          args:
            - serve
            - --datastore-engine=postgres
            - --datastore-conn-uri=postgres://$(DB_USERNAME):$(DB_PASSWORD)@$(DB_URL_HOST)/spicedb?sslmode=disable
