kubernetes/overlays/prod/overlays/askem-staging/gateway/keycloak-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
spec:
  template:
    spec:
      containers:
        - name: keycloak
